Seleção de pessoas e lotações a partir de consulta SQL
